--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,12 @@ body {
   }
 }
 
+@media only screen and (min-device-width: 480px) and (max-device-width: 1024px) {
+  .layers__container {
+    transition: transform 0.3s ease-out;;
+  }
+}
+
 /* .layer-7 {
   transform: translateZ(200px);
 } */
